--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/vim-airline/vim-airline-themes
 [submodule "symlinks/vim/bundle/vim-plist"]
 	path = symlinks/vim/bundle/vim-plist
-	url = https://github.com/darfink/vim-plist
+	url = https://github.com/darfink/vim-plistb
