--- a/symlinks/tmux.conf
+++ b/symlinks/tmux.conf
@@ -1,4 +1,4 @@
-set -g mouse on
+#set -g mouse on
 
 # Allow xterm titles in terminal window, terminal scrolling with scrollbar, and setting overrides of C-Up, C-Down, C-Left, C-Right
 # (commented out because it disables cursor navigation in vim)
